# wv_demo_uploader

./: .gitattributes  .gitignore  CLAUDE.md  MANIFEST.in  README.md  demo.ipynb  docker-compose.yml  importer.py  pyproject.toml  requirements.txt  temp.py  upload_demo_dataset.py  wv_datasets.py
data/: jeopardy_1k_categories.csv  wiki_loch_ness_monster.json  wiki_turtle_ship.json
tests/: test_dataset_config.py  test_imports.py  test_integration.py
weaviate_datasets/: __init__.py  datasets.py  v3_datasets.py
weaviate_datasets/data/: newsarticles_schema.json  wiki_angkor_wat.json  wiki_cities_500.csv  wiki_lewis_hamilton.json  wiki_machu_picchu.json
weaviate_datasets/data/wiki100/: Africa.txt  Agriculture.txt  Anatomy.txt  Ancient history.txt  Animal.txt  Architecture.txt  Arithmetic.txt  Asia.txt  Astronomy.txt  Atom.txt  Biology.txt  Book.txt  Business.txt  Cell (biology).txt  Chemical element.txt  Chemistry.txt  City.txt  Civilization.txt  Climate.txt  Clothing.txt  Communication.txt  Computer.txt  Country.txt  Culture.txt  Death.txt  Deity.txt  Disease.txt  Early modern period.txt  Earth.txt  Ecology.txt  Economics.txt  Education.txt  Electricity.txt  Emotion.txt  Energy.txt  Engineering.txt  Entertainment.txt  Ethics.txt  Ethnicity.txt  Europe.txt  (+61 more)
wv_datasets/: __init__.py  datasets.py
wv_datasets/data/: wiki_apple_strudel.json  wiki_bitmap_index.json  wiki_sydney_opera_house.json
