# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weaviate-demo-datasets"
version = "0.6.0"
description = "Unofficial demo datasets for Weaviate"
readme = "README.md"
authors = [{ name = "JP Hwang", email = "me@jphwang.com" }]
dependencies = [
    "pandas",
    "numpy",
    "tqdm"
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["weaviate_datasets", "weaviate_datasets.*"]
